fix: 修復物理引擎測試 — FES結果快取、SVO壓縮計數、DDGI南極點映射